# ChangeLog for dev-util/cppcheck
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/cppcheck/ChangeLog,v 1.23 2011/03/05 00:42:56 xmw Exp $

*cppcheck-1.47 (05 Mar 2011)

  05 Mar 2011; Michael Weber <xmw@gentoo.org> +cppcheck-1.47.ebuild:
  version bump

  08 Jan 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  cppcheck-1.46.1.ebuild:
  Fix deprecation warning.

  08 Jan 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -cppcheck-1.41-r1.ebuild, -cppcheck-1.43.ebuild, -cppcheck-1.44.ebuild,
  -cppcheck-1.45-r1.ebuild:
  Delete.

*cppcheck-1.46.1 (01 Jan 2011)

  01 Jan 2011; Michael Weber <xmw@gentoo.org> +cppcheck-1.46.1.ebuild:
  Version bump (thanks to Andrey Hippo <ahippo@yandex.ru> for the report on bug
  349284)

*cppcheck-1.45-r1 (11 Nov 2010)

  11 Nov 2010; Michael Weber <xmw@gentoo.org> -cppcheck-1.45.ebuild,
  +cppcheck-1.45-r1.ebuild, metadata.xml:
  Taking maintainership. Added python/distutils eclasses and IUSE htmlreport
  to support cppcheck-htmlreport (thanks to David Hallas <david@cgp.dk> on
  bug #320369). Fixed cppcheck-gui installation (thanks to John Keeping
  <john.keeping@lineone.net> on bug #343997).

  03 Nov 2010; Patrick Lauer <patrick@gentoo.org> cppcheck-1.45.ebuild:
  Adding missing qt-assistant dep, #343959

*cppcheck-1.45 (02 Nov 2010)

  02 Nov 2010; Patrick Lauer <patrick@gentoo.org> +cppcheck-1.45.ebuild:
  Bump for #339734

*cppcheck-1.44 (13 Aug 2010)

  13 Aug 2010; Patrick Lauer <patrick@gentoo.org> +cppcheck-1.44.ebuild:
  Bump, thanks to Benjamin Bannier for notifying. Closes #328563

  18 Jun 2010; Patrick Lauer <patrick@gentoo.org> -cppcheck-1.38.ebuild,
  -cppcheck-1.39.ebuild, -cppcheck-1.40.ebuild, -cppcheck-1.41.ebuild:
  Remove old

*cppcheck-1.43 (18 May 2010)

  18 May 2010; Patrick Lauer <patrick@gentoo.org> +cppcheck-1.43.ebuild:
  Bump for #319249

*cppcheck-1.41-r1 (03 May 2010)
