@@ -1,26 +1,18 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 DIST cppcheck-1.46.1.tar.bz2 676586 RMD160 5a82adb010c9bee0e96d2ac1fddd4b5fc4f7ad5c SHA1 fb1bc1b44341c8fd111e06c217c91f108142b71c SHA256 e91f6be0f4aeeda3a3bbfd19caa9f7e35013018d9a9f164653bad1f266f08f34
 DIST cppcheck-1.47.tar.bz2 794349 RMD160 4a511aecf9a4cec5992f50ff6b29e28bd058ce46 SHA1 ab30d8968064d50d2e1022c749b0d7d10c8b65ae SHA256 60d290088a131b49ed4b30cc6940b6a041b59002404223500dce65d71c2a46ae
+DIST cppcheck-1.48.tar.bz2 833185 RMD160 de40627f6fced2694427f132d2d93f9f33211187 SHA1 10cf38034148b7cb258840febe620ba397114fd1 SHA256 5f5567a2aef66b1237c8cbcfbd8aada35b99dccbe17b1a55f20622c7813c7b54
 EBUILD cppcheck-1.46.1.ebuild 1561 RMD160 8e28c345ff8a9b84099280301b61f88270f3954e SHA1 f146e84d813116916632a8b009242a05a2688435 SHA256 b73ca03e2a9f00e6fb7dae69c44479ad26a3dfc16dd7e1d5103c89848e307c22
 EBUILD cppcheck-1.47.ebuild 1528 RMD160 7ad15ad8ec61baadcc7d75aa550399a63a20678f SHA1 f42a57d047d376404d7027d72be182c74d35f210 SHA256 48fa72315e464a4be714e952c3c6e5c9616f821a1b0fe4c60764c1ecba52deda
-MISC ChangeLog 3676 RMD160 0042d72f5f1b91e33e5b0cfe8074a2a48f024996 SHA1 fa76d55c45097777c3134af8505b7a1392927731 SHA256 dd89b0b3fac96c11898bcdf1c5233d960ddb119bcb5f24d271397b1e5b40db92
+EBUILD cppcheck-1.48.ebuild 1523 RMD160 1b5c8b5184c27be445af76ab25eea68e9fb972f9 SHA1 2a8f95f0606a6607543f9e2be3b235c36d32f5dd SHA256 d526574b3f6f96730e66daa2aad0047049fc52f6da44d79f4314139acd7fc463
+MISC ChangeLog 3844 RMD160 905bbdbef8af0c83af694f6818e04aaf4c888ca8 SHA1 b319c9e0e7f942b06f86be709f7bb840502bb04d SHA256 b474bef21694db3067159935abbc2b42ef95651ef669527505b46a0921ad99b4
 MISC metadata.xml 316 RMD160 52d3658d54e00fc0ff3e31bc7cb5b0b6fb916eb5 SHA1 9299471a24c2d7382e3a07974ad58e1647b95e55 SHA256 1b77a4e77847849f22187f30f9b3dfa9c2aa39aa95bcf2a0025577d8883da65c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iQIcBAEBAgAGBQJNpNeQAAoJENgZr6v6gHY0fvoQAL6qfdwuJE7kuqzbyYo8bnuA
-p+6+SAfjC54KrafeQVuDayRx3ta+Fk0A9Tc6K25S38Je1RtfaG35/IHXai6XX/Jz
-qfZAUpPYugwD8GYJBjztt8VSsZttdZhK3XD8xO5mGd3283miPFrUOe4qlGMmi0td
-ZM6S3u8Z/jWpfW/y+d2JWfFkfuK54eByxt0D7iG/aqMB2HSzvPatiahjPvEra5nI
-s3y7tQeYJ4eVu2R4no0AqAD2sSfUM+kvB0bllIJlvxKS0/FRMxMQAnpAzhOUDi7d
-Ky6AOkP9EX2PLAZ6CizJaouuTvkdENUSSEwArTj6oQp5Hgu2Q8OrHhQxdwhalzEB
-CnFXcdO8oCMj+CKzT27fL7BLRjDjiHqPP3ksBoDyVGAeRcEDQqMdkrnHMl5fA3nF
-7JF7dpcuOLwt6cxUwMuUgj4WDX+cdDzlf7fqTIKo+5Qg+8scALWYveKMzCAivxji
-m3eE9CJsT7eTxGtm97431cv1ugi9RaEVP3r3nzg/oIa1K33mnEqx69+UYpUHIzGm
-dkHOjMH+LOISf0cfUzs++naUCpwkhiIQYETVxQlyYi1xCGDK+d7bt0FY9gKoF3Gc
-pziq0wcVj70NBG58NP+gTfvdDA6oy7z14eOYHqdfohduSkq2mmJ8Ahp6Q4bJhZ3/
-rzl1YPHllBVLl4uFD7Or
-=odgj
+iF4EAREIAAYFAk24iFIACgkQknrdDGLu8JAwkgEAjCNeb2dJ1Reqi8IwX6rqIBR8
+IKBX9vdkyO6OJQfQkWsA/Ri6OV54oFkQfonGNlxFOVIkGyrcb+ZpRxDngx/LVPXn
+=6Uk3
 -----END PGP SIGNATURE-----
