@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/cppcheck
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/cppcheck/ChangeLog,v 1.23 2011/03/05 00:42:56 xmw Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/cppcheck/ChangeLog,v 1.24 2011/04/27 21:19:02 xmw Exp $
+
+*cppcheck-1.48 (27 Apr 2011)
+
+  27 Apr 2011; Michael Weber <xmw@gentoo.org> +cppcheck-1.48.ebuild:
+  Version bump (thanks to Jaak Ristioja for the report, bug 365047)
 
 *cppcheck-1.47 (05 Mar 2011)
 
